--- a/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
+++ b/main.dSYM/Contents/Resources/Relocations/aarch64/main.yml
@@ -2,62 +2,56 @@
 triple:          'arm64-apple-darwin'
 binary-path:     main
 relocations:
-  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0x0, symBinAddr: 0x1000021A8, symSize: 0x164 }
-  - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _renderer, symObjAddr: 0xB080, symBinAddr: 0x100008110, symSize: 0x0 }
-  - { offsetInCU: 0x69, offset: 0x69, size: 0x8, addend: 0x0, symName: _window, symObjAddr: 0xB088, symBinAddr: 0x100008118, symSize: 0x0 }
-  - { offsetInCU: 0x93, offset: 0x93, size: 0x8, addend: 0x0, symName: _texture, symObjAddr: 0xB090, symBinAddr: 0x100008120, symSize: 0x0 }
-  - { offsetInCU: 0xBD, offset: 0xBD, size: 0x8, addend: 0x0, symName: _color_buffer, symObjAddr: 0xB098, symBinAddr: 0x100008128, symSize: 0x0 }
-  - { offsetInCU: 0xE9, offset: 0xE9, size: 0x8, addend: 0x0, symName: _is_running, symObjAddr: 0xB0A0, symBinAddr: 0x100008130, symSize: 0x0 }
-  - { offsetInCU: 0x105, offset: 0x105, size: 0x8, addend: 0x0, symName: _scaling_factor, symObjAddr: 0x1C40, symBinAddr: 0x100008000, symSize: 0x0 }
-  - { offsetInCU: 0x121, offset: 0x121, size: 0x8, addend: 0x0, symName: _previous_frame_time, symObjAddr: 0xB0A4, symBinAddr: 0x100008134, symSize: 0x0 }
-  - { offsetInCU: 0x136, offset: 0x136, size: 0x8, addend: 0x0, symName: _camera_position, symObjAddr: 0xB0A8, symBinAddr: 0x100008138, symSize: 0x0 }
-  - { offsetInCU: 0x186, offset: 0x186, size: 0x8, addend: 0x0, symName: _t_cnt, symObjAddr: 0xB0B4, symBinAddr: 0x100008144, symSize: 0x0 }
-  - { offsetInCU: 0x19B, offset: 0x19B, size: 0x8, addend: 0x0, symName: _cube_scale, symObjAddr: 0x1C44, symBinAddr: 0x100008004, symSize: 0x0 }
-  - { offsetInCU: 0x1B0, offset: 0x1B0, size: 0x8, addend: 0x0, symName: _cube_translate, symObjAddr: 0x1C50, symBinAddr: 0x100008010, symSize: 0x0 }
-  - { offsetInCU: 0x1C5, offset: 0x1C5, size: 0x8, addend: 0x0, symName: _cube_rotation, symObjAddr: 0xB0B8, symBinAddr: 0x100008148, symSize: 0x0 }
-  - { offsetInCU: 0x1DA, offset: 0x1DA, size: 0x8, addend: 0x0, symName: _mesh_vertices, symObjAddr: 0x1C5C, symBinAddr: 0x10000801C, symSize: 0x0 }
-  - { offsetInCU: 0x202, offset: 0x202, size: 0x8, addend: 0x0, symName: _mesh_faces, symObjAddr: 0x1CBC, symBinAddr: 0x10000807C, symSize: 0x0 }
-  - { offsetInCU: 0x25E, offset: 0x25E, size: 0x8, addend: 0x0, symName: _window_width, symBinAddr: 0x10000DF18, symSize: 0x0 }
-  - { offsetInCU: 0x273, offset: 0x273, size: 0x8, addend: 0x0, symName: _window_height, symBinAddr: 0x10000DF14, symSize: 0x0 }
-  - { offsetInCU: 0x288, offset: 0x288, size: 0x8, addend: 0x0, symName: _triangles_to_render, symBinAddr: 0x100008154, symSize: 0x0 }
-  - { offsetInCU: 0x980, offset: 0x980, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0x0, symBinAddr: 0x1000021A8, symSize: 0x164 }
-  - { offsetInCU: 0x9A8, offset: 0x9A8, size: 0x8, addend: 0x0, symName: _clean_up_windowing_system, symObjAddr: 0x164, symBinAddr: 0x10000230C, symSize: 0x38 }
-  - { offsetInCU: 0x9BD, offset: 0x9BD, size: 0x8, addend: 0x0, symName: _process_keyboard_input, symObjAddr: 0x19C, symBinAddr: 0x100002344, symSize: 0xB0 }
-  - { offsetInCU: 0x9E1, offset: 0x9E1, size: 0x8, addend: 0x0, symName: _setup_memory_buffer, symObjAddr: 0x24C, symBinAddr: 0x1000023F4, symSize: 0x84 }
-  - { offsetInCU: 0x9F6, offset: 0x9F6, size: 0x8, addend: 0x0, symName: _clear_color_buffer, symObjAddr: 0x2D0, symBinAddr: 0x100002478, symSize: 0x70 }
-  - { offsetInCU: 0xA36, offset: 0xA36, size: 0x8, addend: 0x0, symName: _draw_triangle, symObjAddr: 0x340, symBinAddr: 0x1000024E8, symSize: 0x7C }
-  - { offsetInCU: 0xAAE, offset: 0xAAE, size: 0x8, addend: 0x0, symName: _draw_line, symObjAddr: 0x3BC, symBinAddr: 0x100002564, symSize: 0x18C }
-  - { offsetInCU: 0xB5E, offset: 0xB5E, size: 0x8, addend: 0x0, symName: _draw_pixel, symObjAddr: 0x548, symBinAddr: 0x1000026F0, symSize: 0xB0 }
-  - { offsetInCU: 0xB9E, offset: 0xB9E, size: 0x8, addend: 0x0, symName: _draw_rectangle, symObjAddr: 0x5F8, symBinAddr: 0x1000027A0, symSize: 0xBC }
-  - { offsetInCU: 0xC32, offset: 0xC32, size: 0x8, addend: 0x0, symName: _perspective_projection_point, symObjAddr: 0x6B4, symBinAddr: 0x10000285C, symSize: 0x5C }
-  - { offsetInCU: 0xC68, offset: 0xC68, size: 0x8, addend: 0x0, symName: _project_model, symObjAddr: 0x710, symBinAddr: 0x1000028B8, symSize: 0x768 }
-  - { offsetInCU: 0xE70, offset: 0xE70, size: 0x8, addend: 0x0, symName: _mat4_make_scale, symObjAddr: 0xE78, symBinAddr: 0x100003020, symSize: 0x48 }
-  - { offsetInCU: 0xEC8, offset: 0xEC8, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_x, symObjAddr: 0xEC0, symBinAddr: 0x100003068, symSize: 0x78 }
-  - { offsetInCU: 0xF20, offset: 0xF20, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_y, symObjAddr: 0xF38, symBinAddr: 0x1000030E0, symSize: 0x78 }
-  - { offsetInCU: 0xF78, offset: 0xF78, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_z, symObjAddr: 0xFB0, symBinAddr: 0x100003158, symSize: 0x78 }
-  - { offsetInCU: 0xFD0, offset: 0xFD0, size: 0x8, addend: 0x0, symName: _mat4_make_translate, symObjAddr: 0x1028, symBinAddr: 0x1000031D0, symSize: 0x48 }
-  - { offsetInCU: 0x1028, offset: 0x1028, size: 0x8, addend: 0x0, symName: _mat4_identity, symObjAddr: 0x1070, symBinAddr: 0x100003218, symSize: 0x44 }
-  - { offsetInCU: 0x1053, offset: 0x1053, size: 0x8, addend: 0x0, symName: _mat4_mul_mat4, symObjAddr: 0x10B4, symBinAddr: 0x10000325C, symSize: 0x110 }
-  - { offsetInCU: 0x10D8, offset: 0x10D8, size: 0x8, addend: 0x0, symName: _vec4_from_vec3, symObjAddr: 0x11C4, symBinAddr: 0x10000336C, symSize: 0x48 }
-  - { offsetInCU: 0x1111, offset: 0x1111, size: 0x8, addend: 0x0, symName: _mat4_mul_vec4, symObjAddr: 0x120C, symBinAddr: 0x1000033B4, symSize: 0x104 }
-  - { offsetInCU: 0x115A, offset: 0x115A, size: 0x8, addend: 0x0, symName: _vec3_from_vec4, symObjAddr: 0x1310, symBinAddr: 0x1000034B8, symSize: 0x40 }
-  - { offsetInCU: 0x1193, offset: 0x1193, size: 0x8, addend: 0x0, symName: _vec3_sub, symObjAddr: 0x1350, symBinAddr: 0x1000034F8, symSize: 0x60 }
-  - { offsetInCU: 0x11DB, offset: 0x11DB, size: 0x8, addend: 0x0, symName: _vec3_cross, symObjAddr: 0x13B0, symBinAddr: 0x100003558, symSize: 0x84 }
-  - { offsetInCU: 0x1223, offset: 0x1223, size: 0x8, addend: 0x0, symName: _vec3_dot, symObjAddr: 0x1434, symBinAddr: 0x1000035DC, symSize: 0x48 }
-  - { offsetInCU: 0x125C, offset: 0x125C, size: 0x8, addend: 0x0, symName: _vec3_rotate_z, symObjAddr: 0x147C, symBinAddr: 0x100003624, symSize: 0xE4 }
-  - { offsetInCU: 0x12A4, offset: 0x12A4, size: 0x8, addend: 0x0, symName: _vec3_rotate_y, symObjAddr: 0x1560, symBinAddr: 0x100003708, symSize: 0xE4 }
-  - { offsetInCU: 0x12EC, offset: 0x12EC, size: 0x8, addend: 0x0, symName: _vec3_rotate_x, symObjAddr: 0x1644, symBinAddr: 0x1000037EC, symSize: 0xE4 }
-  - { offsetInCU: 0x1334, offset: 0x1334, size: 0x8, addend: 0x0, symName: _vec3_length, symObjAddr: 0x1728, symBinAddr: 0x1000038D0, symSize: 0x48 }
-  - { offsetInCU: 0x135E, offset: 0x135E, size: 0x8, addend: 0x0, symName: _vec3_add, symObjAddr: 0x1770, symBinAddr: 0x100003918, symSize: 0x60 }
-  - { offsetInCU: 0x13A6, offset: 0x13A6, size: 0x8, addend: 0x0, symName: _vec3_mul, symObjAddr: 0x17D0, symBinAddr: 0x100003978, symSize: 0x58 }
-  - { offsetInCU: 0x13EE, offset: 0x13EE, size: 0x8, addend: 0x0, symName: _vec3_div, symObjAddr: 0x1828, symBinAddr: 0x1000039D0, symSize: 0x58 }
-  - { offsetInCU: 0x1436, offset: 0x1436, size: 0x8, addend: 0x0, symName: _vec2_length, symObjAddr: 0x1880, symBinAddr: 0x100003A28, symSize: 0x38 }
-  - { offsetInCU: 0x1460, offset: 0x1460, size: 0x8, addend: 0x0, symName: _vec2_add, symObjAddr: 0x18B8, symBinAddr: 0x100003A60, symSize: 0x44 }
-  - { offsetInCU: 0x14A8, offset: 0x14A8, size: 0x8, addend: 0x0, symName: _vec2_sub, symObjAddr: 0x18FC, symBinAddr: 0x100003AA4, symSize: 0x44 }
-  - { offsetInCU: 0x14F0, offset: 0x14F0, size: 0x8, addend: 0x0, symName: _vec2_mul, symObjAddr: 0x1940, symBinAddr: 0x100003AE8, symSize: 0x40 }
-  - { offsetInCU: 0x1538, offset: 0x1538, size: 0x8, addend: 0x0, symName: _vec2_div, symObjAddr: 0x1980, symBinAddr: 0x100003B28, symSize: 0x40 }
-  - { offsetInCU: 0x1580, offset: 0x1580, size: 0x8, addend: 0x0, symName: _vec2_dot, symObjAddr: 0x19C0, symBinAddr: 0x100003B68, symSize: 0x34 }
-  - { offsetInCU: 0x15B9, offset: 0x15B9, size: 0x8, addend: 0x0, symName: _update_state, symObjAddr: 0x19F4, symBinAddr: 0x100003B9C, symSize: 0x15C }
-  - { offsetInCU: 0x15DF, offset: 0x15DF, size: 0x8, addend: 0x0, symName: _run_render_pipeline, symObjAddr: 0x1B50, symBinAddr: 0x100003CF8, symSize: 0x78 }
-  - { offsetInCU: 0x15F5, offset: 0x15F5, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1BC8, symBinAddr: 0x100003D70, symSize: 0x5C }
+  - { offsetInCU: 0x26, offset: 0x26, size: 0x8, addend: 0x0, symName: _draw_hollow_rectangle, symObjAddr: 0x0, symBinAddr: 0x100002150, symSize: 0x104 }
+  - { offsetInCU: 0x3F, offset: 0x3F, size: 0x8, addend: 0x0, symName: _renderer, symObjAddr: 0xB1F8, symBinAddr: 0x1000080E8, symSize: 0x0 }
+  - { offsetInCU: 0x69, offset: 0x69, size: 0x8, addend: 0x0, symName: _window, symObjAddr: 0xB200, symBinAddr: 0x1000080F0, symSize: 0x0 }
+  - { offsetInCU: 0x93, offset: 0x93, size: 0x8, addend: 0x0, symName: _texture, symObjAddr: 0xB208, symBinAddr: 0x1000080F8, symSize: 0x0 }
+  - { offsetInCU: 0xBD, offset: 0xBD, size: 0x8, addend: 0x0, symName: _color_buffer, symObjAddr: 0xB210, symBinAddr: 0x100008100, symSize: 0x0 }
+  - { offsetInCU: 0xE9, offset: 0xE9, size: 0x8, addend: 0x0, symName: _is_running, symObjAddr: 0xB218, symBinAddr: 0x100008108, symSize: 0x0 }
+  - { offsetInCU: 0x105, offset: 0x105, size: 0x8, addend: 0x0, symName: _scaling_factor, symObjAddr: 0x1C90, symBinAddr: 0x100008000, symSize: 0x0 }
+  - { offsetInCU: 0x121, offset: 0x121, size: 0x8, addend: 0x0, symName: _previous_frame_time, symObjAddr: 0xB21C, symBinAddr: 0x10000810C, symSize: 0x0 }
+  - { offsetInCU: 0x136, offset: 0x136, size: 0x8, addend: 0x0, symName: _camera_position, symObjAddr: 0xB220, symBinAddr: 0x100008110, symSize: 0x0 }
+  - { offsetInCU: 0x186, offset: 0x186, size: 0x8, addend: 0x0, symName: _t_cnt, symObjAddr: 0xB22C, symBinAddr: 0x10000811C, symSize: 0x0 }
+  - { offsetInCU: 0x19B, offset: 0x19B, size: 0x8, addend: 0x0, symName: _scale, symObjAddr: 0x1C94, symBinAddr: 0x100008004, symSize: 0x0 }
+  - { offsetInCU: 0x1B0, offset: 0x1B0, size: 0x8, addend: 0x0, symName: _translate, symObjAddr: 0x1CA0, symBinAddr: 0x100008010, symSize: 0x0 }
+  - { offsetInCU: 0x1C5, offset: 0x1C5, size: 0x8, addend: 0x0, symName: _rotation, symObjAddr: 0xB230, symBinAddr: 0x100008120, symSize: 0x0 }
+  - { offsetInCU: 0x1DA, offset: 0x1DA, size: 0x8, addend: 0x0, symName: _mesh_vertices, symObjAddr: 0x1CAC, symBinAddr: 0x10000801C, symSize: 0x0 }
+  - { offsetInCU: 0x202, offset: 0x202, size: 0x8, addend: 0x0, symName: _mesh_faces, symObjAddr: 0x1CE8, symBinAddr: 0x100008058, symSize: 0x0 }
+  - { offsetInCU: 0x25E, offset: 0x25E, size: 0x8, addend: 0x0, symName: _window_width, symBinAddr: 0x10000DEF0, symSize: 0x0 }
+  - { offsetInCU: 0x273, offset: 0x273, size: 0x8, addend: 0x0, symName: _window_height, symBinAddr: 0x10000DEEC, symSize: 0x0 }
+  - { offsetInCU: 0x288, offset: 0x288, size: 0x8, addend: 0x0, symName: _triangles_to_render, symBinAddr: 0x10000812C, symSize: 0x0 }
+  - { offsetInCU: 0x975, offset: 0x975, size: 0x8, addend: 0x0, symName: _draw_hollow_rectangle, symObjAddr: 0x0, symBinAddr: 0x100002150, symSize: 0x104 }
+  - { offsetInCU: 0xA09, offset: 0xA09, size: 0x8, addend: 0x0, symName: _draw_pixel, symObjAddr: 0x104, symBinAddr: 0x100002254, symSize: 0xB0 }
+  - { offsetInCU: 0xA49, offset: 0xA49, size: 0x8, addend: 0x0, symName: _draw_line, symObjAddr: 0x1B4, symBinAddr: 0x100002304, symSize: 0x18C }
+  - { offsetInCU: 0xAF9, offset: 0xAF9, size: 0x8, addend: 0x0, symName: _draw_rectangle, symObjAddr: 0x340, symBinAddr: 0x100002490, symSize: 0xBC }
+  - { offsetInCU: 0xB8D, offset: 0xB8D, size: 0x8, addend: 0x0, symName: _draw_triangle, symObjAddr: 0x3FC, symBinAddr: 0x10000254C, symSize: 0x7C }
+  - { offsetInCU: 0xC05, offset: 0xC05, size: 0x8, addend: 0x0, symName: _vec3_add, symObjAddr: 0x478, symBinAddr: 0x1000025C8, symSize: 0x60 }
+  - { offsetInCU: 0xC49, offset: 0xC49, size: 0x8, addend: 0x0, symName: _vec3_sub, symObjAddr: 0x4D8, symBinAddr: 0x100002628, symSize: 0x60 }
+  - { offsetInCU: 0xC8D, offset: 0xC8D, size: 0x8, addend: 0x0, symName: _vec3_mul, symObjAddr: 0x538, symBinAddr: 0x100002688, symSize: 0x58 }
+  - { offsetInCU: 0xCD1, offset: 0xCD1, size: 0x8, addend: 0x0, symName: _vec3_div, symObjAddr: 0x590, symBinAddr: 0x1000026E0, symSize: 0x58 }
+  - { offsetInCU: 0xD15, offset: 0xD15, size: 0x8, addend: 0x0, symName: _vec3_cross, symObjAddr: 0x5E8, symBinAddr: 0x100002738, symSize: 0x84 }
+  - { offsetInCU: 0xD59, offset: 0xD59, size: 0x8, addend: 0x0, symName: _vec3_dot, symObjAddr: 0x66C, symBinAddr: 0x1000027BC, symSize: 0x48 }
+  - { offsetInCU: 0xD8F, offset: 0xD8F, size: 0x8, addend: 0x0, symName: _vec2_length, symObjAddr: 0x6B4, symBinAddr: 0x100002804, symSize: 0x38 }
+  - { offsetInCU: 0xDB7, offset: 0xDB7, size: 0x8, addend: 0x0, symName: _mat4_identity, symObjAddr: 0x6EC, symBinAddr: 0x10000283C, symSize: 0x44 }
+  - { offsetInCU: 0xDE0, offset: 0xDE0, size: 0x8, addend: 0x0, symName: _mat4_make_scale, symObjAddr: 0x730, symBinAddr: 0x100002880, symSize: 0x48 }
+  - { offsetInCU: 0xE33, offset: 0xE33, size: 0x8, addend: 0x0, symName: _mat4_make_translate, symObjAddr: 0x778, symBinAddr: 0x1000028C8, symSize: 0x48 }
+  - { offsetInCU: 0xE86, offset: 0xE86, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_x, symObjAddr: 0x7C0, symBinAddr: 0x100002910, symSize: 0x78 }
+  - { offsetInCU: 0xED9, offset: 0xED9, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_y, symObjAddr: 0x838, symBinAddr: 0x100002988, symSize: 0x78 }
+  - { offsetInCU: 0xF2E, offset: 0xF2E, size: 0x8, addend: 0x0, symName: _mat4_make_rotation_z, symObjAddr: 0x8B0, symBinAddr: 0x100002A00, symSize: 0x78 }
+  - { offsetInCU: 0xF86, offset: 0xF86, size: 0x8, addend: 0x0, symName: _mat4_mul_vec4, symObjAddr: 0x928, symBinAddr: 0x100002A78, symSize: 0x104 }
+  - { offsetInCU: 0xFCF, offset: 0xFCF, size: 0x8, addend: 0x0, symName: _vec4_from_vec3, symObjAddr: 0xA2C, symBinAddr: 0x100002B7C, symSize: 0x48 }
+  - { offsetInCU: 0x1008, offset: 0x1008, size: 0x8, addend: 0x0, symName: _vec3_from_vec4, symObjAddr: 0xA74, symBinAddr: 0x100002BC4, symSize: 0x40 }
+  - { offsetInCU: 0x1041, offset: 0x1041, size: 0x8, addend: 0x0, symName: _mat4_mul_mat4, symObjAddr: 0xAB4, symBinAddr: 0x100002C04, symSize: 0x110 }
+  - { offsetInCU: 0x10C6, offset: 0x10C6, size: 0x8, addend: 0x0, symName: _perspective_projection_point, symObjAddr: 0xBC4, symBinAddr: 0x100002D14, symSize: 0x5C }
+  - { offsetInCU: 0x10FF, offset: 0x10FF, size: 0x8, addend: 0x0, symName: _initialize_windowing_system, symObjAddr: 0xC20, symBinAddr: 0x100002D70, symSize: 0x164 }
+  - { offsetInCU: 0x1129, offset: 0x1129, size: 0x8, addend: 0x0, symName: _clean_up_windowing_system, symObjAddr: 0xD84, symBinAddr: 0x100002ED4, symSize: 0x38 }
+  - { offsetInCU: 0x113F, offset: 0x113F, size: 0x8, addend: 0x0, symName: _process_keyboard_input, symObjAddr: 0xDBC, symBinAddr: 0x100002F0C, symSize: 0xB0 }
+  - { offsetInCU: 0x1165, offset: 0x1165, size: 0x8, addend: 0x0, symName: _setup_memory_buffer, symObjAddr: 0xE6C, symBinAddr: 0x100002FBC, symSize: 0x84 }
+  - { offsetInCU: 0x117B, offset: 0x117B, size: 0x8, addend: 0x0, symName: _clear_color_buffer, symObjAddr: 0xEF0, symBinAddr: 0x100003040, symSize: 0x8C }
+  - { offsetInCU: 0x11CD, offset: 0x11CD, size: 0x8, addend: 0x0, symName: _update_state, symObjAddr: 0xF7C, symBinAddr: 0x1000030CC, symSize: 0x24 }
+  - { offsetInCU: 0x11E3, offset: 0x11E3, size: 0x8, addend: 0x0, symName: _run_render_pipeline, symObjAddr: 0xFA0, symBinAddr: 0x1000030F0, symSize: 0x78 }
+  - { offsetInCU: 0x11F9, offset: 0x11F9, size: 0x8, addend: 0x0, symName: _project_pyramid, symObjAddr: 0x1018, symBinAddr: 0x100003168, symSize: 0x700 }
+  - { offsetInCU: 0x1407, offset: 0x1407, size: 0x8, addend: 0x0, symName: _update_pyramid_state, symObjAddr: 0x1718, symBinAddr: 0x100003868, symSize: 0xD0 }
+  - { offsetInCU: 0x145A, offset: 0x145A, size: 0x8, addend: 0x0, symName: _spinning_triangle, symObjAddr: 0x17E8, symBinAddr: 0x100003938, symSize: 0x314 }
+  - { offsetInCU: 0x15BB, offset: 0x15BB, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1AFC, symBinAddr: 0x100003C4C, symSize: 0x18C }
 ...
